# igraph-vlk

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/: app_state.h
include/graph/: command_registry.h  graph_actions.h  graph_analysis.h  graph_clustering.h  graph_core.h  graph_filter.h  graph_io.h  graph_layout.h  graph_loader.c  graph_types.h  layered_sphere.c  layered_sphere.h  layout_openord.h  worker_thread.h  wrappers.h  wrappers_centrality.h  wrappers_community.h  wrappers_constructors.h  wrappers_layout.h  wrappers_paths.h  wrappers_structural.h
include/interaction/: camera.h  input.h  menu.h  picking.h  spatial.h  state.h
include/ui/: hud.h  menu.h  sphere_menu.h
include/vulkan/: animation_manager.c  animation_manager.h  menu.h  pipeline_compute.h  pipeline_graphics.h  polyhedron.h  renderer.h  renderer_compute.h  renderer_geometry.h  renderer_ui.h  text.h  utils.h  vulkan_commands.h  vulkan_device.h  vulkan_render_pass.h  vulkan_swapchain.h
shaders/: edge.frag  edge.vert  label.frag  label.vert  menu.frag  menu.vert  routing.comp  routing_hub.comp  shader.frag  shader.vert  transparent_sphere.frag  transparent_sphere.vert  ui.frag  ui.vert
src/: animation_manager.c  animation_manager.h  graph_loader.c  graph_loader.h  layered_sphere.c  layered_sphere.h  layout_openord.c  layout_openord.h  main.c  polyhedron.c  polyhedron.h  renderer.c  renderer.h  renderer_geometry.c  renderer_geometry.h  renderer_pipelines.c  renderer_pipelines.h  sphere.c  sphere.h  text.c  text.h  vulkan_utils.c  vulkan_utils.h
src/graph/: command_registry.c  graph_actions.c  graph_actions.h  graph_analysis.c  graph_clustering.c  graph_core.c  graph_filter.c  graph_io.c  graph_layout.c  graph_loader.c  layered_sphere.c  layout_openord.c  worker_thread.c  wrappers.c  wrappers_centrality.c  wrappers_community.c  wrappers_constructors.c  wrappers_layout.c  wrappers_paths.c  wrappers_structural.c
src/interaction/: camera.c  camera.h  input.c  menu.c  picking.c  spatial.c  state.c
src/ui/: hud.c  hud.h  menu.c  sphere_menu.c
src/vulkan/: animation_manager.c  menu.c  pipeline_compute.c  pipeline_graphics.c  pipeline_ui.c  polyhedron.c  renderer.c  renderer_compute.c  renderer_geometry.c  renderer_pipelines.c  renderer_ui.c  text.c  utils.c  vulkan_commands.c  vulkan_device.c  vulkan_render_pass.c  vulkan_swapchain.c
